# vehicle-location-service

./: LICENSE  README.rst  main.py  pyproject.toml  settings.toml
data/: database.db  database.json
scripts/: create_tables.py  populate_database.py
tests/: conftest.py  test_app.py
tests/data/: test_database.json
tests/data_types/: test_database.py
tests/distances/: test_great_circle_distance.py
tests/gis_functions/: test_filter_close_vehicles.py  test_filter_close_vehicles_h3_cells.py  test_report_location.py
tests/models/: test_vehicle.py
vehicle_location_service/: app.py  database.py
vehicle_location_service/data_types/: __init__.py  database.py  vehicle.py
vehicle_location_service/distances/: __init__.py  great_circle_distance.py
vehicle_location_service/gis_functions/: __init__.py  filter_close_vehicles.py  filter_close_vehicles_h3_cells.py  report_location.py
vehicle_location_service/models/: vehicle.py
