[tool.poetry]
name = "vehicle-location-service"
version = "0.1.0"
description = ""
authors = ["Fillipe Goulart <fillipe.mendes@loggi.com>"]
readme = "README.md"
packages = [{include = "vehicle_location_service"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipdb = "^0.13.9"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
