[tool.poetry]
name = "vehicle-location-service"
version = "0.1.0"
description = ""
authors = ["Fillipe Goulart <fillipe.gsm@tutanota.com>"]
readme = "README.rst"
packages = [{include = "vehicle_location_service"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
dynaconf = "^3.1.11"
numpy = "^1.23.4"
bottle = "^0.12.23"
waitress = "^2.1.2"
h3 = "^3.7.4"
peewee = "^3.15.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipdb = "^0.13.9"
ipython = "^8.6.0"
black = "^22.10.0"
mypy = "^0.991"
webtest = "^3.0.0"
mock = "^4.0.3"
types-mock = "^4.0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
